--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   "scripts": {
     "usage": "pnpm run",
     "check": "npm-check --color-always --ignore browser || true",
+    "stylelint": "stylelint --cache --report-needless-disables --report-invalid-scope-disables --report-descriptionless-disables --formatter verbose *.css",
+    "stylelint:fix": "stylelint --cache *.css --fix",
+    "lint": "pnpm run stylelint",
+    "lint:fix": "pnpm run stylelint:fix",
     "test": "make test-all",
     "pretest:dark": "perl -i -pne 's{\"mocha-light\"}{\"mocha-dark\"}g' mocha-dark-test.html",
     "test:dark": "make test-all",
@@ -47,7 +51,9 @@
   },
   "devDependencies": {
     "istanbul-reports": "^3.0.2",
-    "npm-check": "^5.9.2"
+    "npm-check": "^5.9.2",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0"
   },
   "files": [
     "README.md",
