wip In package.json add cp-cover.sh to the npm packaged files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nyc-dark",
-  "version": "0.0.0",
+  "version": "3.0.2",
   "description": "Dark color scheme CSS files for jest / nyc / istanbul-reports, the full-featured javascript coverage tool.",
   "keywords": [
     "nyc",
@@ -57,6 +57,7 @@
     "base.css",
     "prettify.js",
     "prettify.css",
+    "cp-cover.sh",
     "LICENSE"
   ],
   "licenses": [
